dashboard: various style tweaks

--- a/plugins-client/ext.dashboard/dashboard.css
+++ b/plugins-client/ext.dashboard/dashboard.css
@@ -71,6 +71,15 @@ div.loading {
     top: 8px;
 }
 /********************************************************************************
+ * New project
+ *******************************************************************************/
+.store-my-data {
+    padding-right: 4px;
+}
+.new-project .cbcontainer span {
+    font-size: 12px;
+}
+/********************************************************************************
  * Own VM
  *******************************************************************************/
 .own-vm {
