--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -45,6 +45,9 @@
                 window.console = {log:K,debug:K,dir:K,trace:K,error:K,warn:K,profileStart:K,profileEnd:K};
             }
 
+            if (cloud9config.local)
+                document.title += " Local";
+                
             if (!cloud9config.packed) {
                 var RELEASE = "release";
                 var DEBUG   = "debug";
