--- a/plugins-client/ext.sync/style.css
+++ b/plugins-client/ext.sync/style.css
@@ -12,7 +12,7 @@
     width: 250px;
 }
 .sync-info-tooltip .close-sync-info {
-    background: url(/static/ext/main/style/images/close-btn.png) no-repeat 0 0;
+    background: url("{ide.staticPrefix}/ext/main/style/images//close-btn.png") no-repeat 0 0;
     heigth: 14px;
     widht: 13px;
     position: absolute;
@@ -26,9 +26,14 @@
 
 .sync-info-tooltip .sync-file-label {
     color: #818080;
+    padding-top: 6px;
 }
 
 .sync-info-tooltip .pause-sync .caption {
-    background: url(/static/ext/main/style/images/pause-icon.png) no-repeat 0 0;
+    background: url("{ide.staticPrefix}/ext/main/style/images//pause-icon.png") no-repeat 13px 5px;
     height: 13px;
+}
+
+.sync-info-tooltip.menu-bk.c9-tooltip .arrow {
+    left: 65%;
 }
