No more conflicts in ide.tmp.html

--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -34,13 +34,10 @@
                 socketIoTransports: <%socketIoTransports%>,
                 hosted: [%hosted%],
                 settings: <%settingsXml%>,
-<<<<<<< HEAD
                 real: [%real%],
-                env: <%env%>
-=======
+                env: <%env%>,
                 packed: <%packed%> ? true : false,
                 packedName: <%packedName%>
->>>>>>> origin/beta
             };
 
             // prevent console messages from crashing our app!
