Fix packed version

--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -91,7 +91,9 @@
                         });
                     }
                     else {
-                        loadAndBegin(ide, list);
+                        apf.addEventListener("load", function(){
+                            loadAndBegin(ide, list);
+                        });
                     }
                 });
                 preloaderImgs();
