--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -103,7 +103,7 @@
                     }
                     else {
                         apf.addEventListener("load", function(){
-                            loadAndBegin(ide, list);
+                            loadAndBegin(require("core/ide"), list);
                         });
                     }
                 });
