Made 'ide' global also in packaged version.

--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -101,6 +101,7 @@
                     else {
                         apf.addEventListener("load", function() {
                             var ide = require("core/ide");
+                            window.ide = ide;
                             loadAndBegin(ide, list);
                         });
                     }
