mac address fix (partially working)

--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -39,6 +39,7 @@
                 staticUrl: "[%staticUrl%]",
                 socketIoUrl: <%socketIoUrl%>,
                 socketIoTransports: <%socketIoTransports%>,
+                sidkey: <%sidkey%>,
                 hosted: [%hosted%],
                 local: <%local%>,
                 env: <%env%>,
