Use client and server runnerTypes to differentiate supported runners from normal shell commands

--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -28,6 +28,7 @@
                 debug: <%debug%>,
                 sessionId: <%sessionId%>,
                 workspaceId: <%workspaceId%>,
+                runners: <%runners%>,
                 name: <%name%>,
                 uid: <%uid%>,
                 pid: <%pid%>,
