untouch the body style

--- a/plugins-server/cloud9.core/view/ide.tmpl.html
+++ b/plugins-server/cloud9.core/view/ide.tmpl.html
@@ -168,7 +168,7 @@
         //]]>
         </script>
     </head>
-    <body>
+    <body style="display:none">
         <div id="noscript">
             <div class="noscript">
                 <div id="hp_header">
