--- a/doc/resources/common_layout.jade
+++ b/doc/resources/common_layout.jade
@@ -1,86 +1,150 @@
--var dirPrefix = "./";
+-var nodejsRef = 'false'
+-var jsDoc = 'false'
+-var nodejsDev = 'false'
 -var landingPage = 'false'
--var versions = []
+-var isIndex
+-var dirPrefix = ''
+-var verj = ''
 
 mixin doctype
-	!!! 5
+  !!! 5
 
-	<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-	<!--[if IE 7]> <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-	<!--[if IE 8]> <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-	<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+  <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+  <!--[if IE 7]> <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+  <!--[if IE 8]> <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+  <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 
-mixin head
-	meta(charset="utf-8")
-	//- N.B. http://blog.yjl.im/2011/01/bad-value-x-ua-compatible-for-attribute.html
-	meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
+mixin head(dirP, whoAmI)
+  meta(charset="utf-8")
+  //- N.B. http://blog.yjl.im/2011/01/bad-value-x-ua-compatible-for-attribute.html
+  meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
 
-	-if (isIndex)
-		title #{title}
-	-else
-		title #{classId} - #{title}
+  -dirPrefix = dirP
+  -if (isIndex !== undefined || fileName.indexOf("ndex") >= 0)
+    title #{title}
+  -else
+    if (nodejsDev == 'true')
+      title #{title} - #{pageTitle}
+    else
+      title #{title} - #{fileName}
 
-	meta(name="generator", content="c9-doc-build")
-	meta(name="description", content="Ace API documentation for the online code editor.")
-	meta(name="author", content="Garen J. Torikian")
+  mixin makeVersionLabel(whoAmI, false)
 
-	meta(name="viewport", content="width=device-width,initial-scale=1")
+  meta(name="generator", content="panino-doc-build")
+  meta(name="author", content="Garen J. Torikian")
 
-	link(rel="stylesheet", href="#{dirPrefix}resources/csses/bootstrap.min.css")
-	link(rel="stylesheet", href="#{dirPrefix}resources/csses/prettify.css")
-	link(rel="stylesheet", href="#{dirPrefix}resources/csses/ace_api.css")
+  meta(name="viewport", content="width=device-width,initial-scale=1")
 
-	link(href="#{dirPrefix}resources/images/favicon.ico", rel="icon", type="image/x-icon")
+  link(rel="stylesheet", href="#{dirPrefix}#{verj}/assets/csses/bootstrap.css")
+  link(rel="stylesheet", href="#{dirPrefix}#{verj}/assets/csses/prettify.css")
+  link(rel="stylesheet", href="#{dirPrefix}#{verj}/assets/csses/refguide_overrides.css")
 
-	script(src="#{dirPrefix}resources/javascripts/jquery.js")
-	script(src="#{dirPrefix}resources/javascripts/clicker.js")
-	script(src="#{dirPrefix}resources/javascripts/jquery.collapse.js")
-	script(src="#{dirPrefix}resources/javascripts/jquery.cookie.js")
-	script(src="#{dirPrefix}resources/javascripts/bootstrap-dropdown.js")
-	script(src="#{dirPrefix}resources/javascripts/jquery-scrollspy.js")
-	script(script src="#{dirPrefix}resources/javascripts/prettify-extension.js")
+  link(href="#{dirPrefix}#{verj}/assets/images/favicon.ico", rel="icon", type="image/x-icon")
 
-mixin navBar
-	div.navbar.navbar-fixed-top
-		div.navbar-inner
-			div#topSection.container
-				span.brand
+  link(type="text/css", rel="stylesheet", href="http://yandex.st/highlightjs/7.0/styles/vs.min.css")
 
-				ul.nav.topLinks
-					li#ace_site
-						a(href='../index.html') Ace
-					li#ace_api.active
-						a(href='index.html') Ace API Reference
-				form(id='searchbox', action='', class='navbar-search pull-right')	
-					input(class='search-query span3', name='query', type='text', placeholder="Search the API", title="Search across all the documentation")
+  script(src="#{dirPrefix}#{verj}/assets/javascripts/jquery.js")
+  script(src="#{dirPrefix}#{verj}/assets/javascripts/ux.js")
+  script(src="#{dirPrefix}#{verj}/assets/javascripts/clicker.js")
+  script(src="#{dirPrefix}#{verj}/assets/javascripts/jquery.collapse.js")
+
+mixin navBar(fullPath)
+  div.navbar.navbar-fixed-top.navbar-inverse
+    div.navbar-inner
+      div#topSection.container
+
+        ul.nav
+          li(class="dropdown")
+              a(class="dropdown-toggle brand", data-toggle="dropdown", href="http://www.nodemanual.org")
+              ul(class="dropdown-menu")
+                  li
+                      a(href="http://nodebits.org/") Nodebits
+                  li
+                      a(href="http://howtonode.org/") HowToNode
+                  li
+                      a(href="http://training.c9.io/") Node.js Training
+        ul.nav
+          li(class="dropdown versions")
+              a(class="dropdown-toggle versionToggler", href="#") Version&nbsp;
+                mixin makeVersionLabel(fullPath)
+                b.caret
+              ul(class="dropdown-menu")
+                include versionsList
+
+        ul.nav
+          li#node_js_ref
+            a(href='#{dirPrefix}#{verj}/nodejs_ref_guide/index.html') Node.js API Reference
+          li#nodejs_dev_guide
+            a(href='#{dirPrefix}#{verj}/nodejs_dev_guide/index.html') Node.js Guide
+          li#js_doc
+            a(href='#{dirPrefix}#{verj}/js_doc/index.html') Javascript Reference
+        form(id='searchbox', action='', class='navbar-search pull-right') 
+          input(class='search-query span3', name='query', type='text', placeholder="Search the Manual", title="Search across all the documentation")
 
 mixin footer
-	div#footer
-		.footerInner
-			.footer-text.pull-right 
-				p
-					<a href="http://www.c9.io">About Cloud9</a> | Ace & Cloud9 IDE are &copy; <a href="http://ajax.org">Ajax.org</a> 2012
+  div#footer
+    .footerInner
+      .sponsors
+          span.footer-text Thanks to these content providers | &#169; 2012:
+          a(class="c9-logo sponsor", href="http://c9.io/", title="cloud9 ide", target="_blank")
+          a(class="joyent-logo sponsor", href="http://www.joyent.com/", title="joyent", target="_blank")
+          a(class="mozilla-logo sponsor", href="http://www.mozilla.org/", title="mozilla", target="_blank")
+          a(class="debuggable-logo sponsor", href="http://www.debuggable.com/", title="debuggable", target="_blank")
+
 
 mixin endingScripts
-	// scripts concatenated and minified via ant build script
-	<script defer src="#{dirPrefix}resources/javascripts/plugins.js"></script>
-	<script defer src="#{dirPrefix}resources/javascripts/prettify.js"></script>
-	<script defer src="#{dirPrefix}resources/javascripts/prettify-extension.js"></script>
-	<script defer src="#{dirPrefix}resources/javascripts/ux.js"></script>
-	<script defer src="#{dirPrefix}resources/javascripts/disqus-ext.js"></script>
-	<script defer src="#{dirPrefix}resources/javascripts/ga.js"></script>
-	//-<script defer src="tree.js"></script>
-	// end scripts
-
-	//if lt IE 7
-		script(src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js")
-		script
-			window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})
-
+  // scripts concatenated and minified via ant build script
+  script(src="#{dirPrefix}#{verj}/assets/javascripts/ga.js")
+  script(src="#{dirPrefix}#{verj}/assets/javascripts/plugins.js")
+  script(src="#{dirPrefix}#{verj}/assets/javascripts/bootstrap.js")
+  script(src="#{dirPrefix}#{verj}/assets/javascripts/jquery-scrollspy.js") 
+  script(src="#{dirPrefix}#{verj}/assets/javascripts/prettify.js")
+  script(src="#{dirPrefix}#{verj}/assets/javascripts/prettify-extension.js")
+  script(src="#{dirPrefix}#{verj}/assets/javascripts/disqus-ext.js")
 
 mixin identifyBuild(tree, type)
-		landingPage = 'true'
-		-dirPrefix = './'
+  if tree
+    if tree.children[0].file.indexOf('nodejs_ref_guide') >= 0
+        -nodejsRef = 'true'
+    else if tree.children[0].file.indexOf('js_doc') >= 0 
+        -jsDoc = 'true'
+  else if (type == 'nodejs_dev_guide')
+      -nodejsDev = 'true'
+  else
+    landingPage = 'true'
+    -dirPrefix = './'
 
 mixin markdown(text, inline)
-	!= markdown(text, inline)
+  != markdown(text, inline)
+
+mixin formatGHHref(url, type)
+  url = url.substring(url.indexOf("src/") + 4)
+  
+  if type == 'nodejs_ref_guide'
+    url = url.substring(0, url.lastIndexOf("#"))
+    url = 'src/' + url
+  else if type == 'nodejs_dev_guide'
+    url = 'src/' + url
+
+  -url = url.replace(/\/{2,}/g, "/").replace(/\//g,"%2F")
+  <a href='http://c9.io/open/git/?url=git%3A%2F%2Fgithub.com%2Fc9%2Fnodemanual.org.git&file=#{url}&line_start=3&line_end=0' title='Edit in Cloud9 IDE'>[edit]</a>
+
+mixin makeVersionLabel(fullPath, showText)
+  -var id = ''
+  
+  -if (fullPath === undefined)
+     != 'latest'
+  -else
+      -if (fullPath.indexOf("latest") >= 0 || fullPath.indexOf("nodemanual.org/src/index.md") >= 0)
+        -if (showText === undefined)
+          -id = '0.8.11'
+        -else
+          -id = 'latest'
+      -else
+         -id = fullPath.match(/\d\.\d\.\d+/)
+      if id == null 
+          -id = 'latest'
+      -if (verj.length < 1)
+         -verj = id
+      -else
+         != id
