--- a/doc/resources/templates/layout.jade
+++ b/doc/resources/templates/layout.jade
@@ -1,30 +1,35 @@
-include ../../common_layout
+include ../../../common_layout
 include lib
+
+mixin identifyBuild(tree)
 
 mixin doctype
 
 html(xmlns="http://www.w3.org/1999/xhtml")
-	head
-		mixin head
-	
-	body
-		mixin navBar
-		#nonFooter
-			#wrapper
-				.content
-					.row.centerpiece
-						.span3#sidebarContainer
-							#sidebar
-								include ace_menu.jade
-						.span9#mainContent
-							#documentation
-								-if (isIndex)
-									!= content
-								-else
-									mixin api()
-
-							div(id="disqus_thread")
-			.push
-		mixin footer
-	
-		mixin endingScripts
+  head
+    mixin head('./../../', tree.children[0].file)
+  
+  body
+    mixin navBar(tree.children[0].file)
+    #nonFooter
+      #wrapper
+        .content
+          .row.centerpiece
+            .span3(id="sidebarContainer", data-spy="affix", data-offset-top="200")
+              #sidebar
+                if nodejsRef == 'true'
+                  include nodejs_ref_menu.jade
+                else
+                  include js_doc_menu.jade
+            .span9#mainContent
+              #documentation
+                -if (isIndex)
+                  mixin markdown(indexContent)
+                -else
+                  mixin api()
+        
+              div#disqus_thread
+       .push
+    mixin footer
+  
+    mixin endingScripts
