--- a/doc/resources/templates/lib.jade
+++ b/doc/resources/templates/lib.jade
@@ -23,56 +23,8 @@ mixin article(obj, parents)
         .section.description
           .memberContent
             mixin markdown(obj.description)
-
-      collection = obj.children.filter(function(x){return x.type === 'namespace'});
-      if collection.length
-        .section.namespaces
-          // 
-            h3 Namespaces
-            .memberContent
-              mixin short_description_list(collection)
-
-      collection = obj.children.filter(function(x){return x.type === 'mixin'});
-      if collection.length
-        .section.mixins
-          // 
-            h3 Mixins
-            .memberContent
-              mixin short_description_list(collection)
-
-      if obj.type === 'class'
-
-        if obj.superclass
-          .section.superclass
-            // h3 
-              Superclass
-              .memberContent
-                mixin link(obj.superclass)
-
-        if obj.subclasses.length
-          .section.subclasses
-            // h3 
-              Subclasses
-              .memberContent
-                mixin links(obj.subclasses)
-
-      if obj.included_mixins
-        .section.mixins
-          // h3 
-            Includes
-            .memberContent
-              mixin links(obj.included_mixins)
-
-      collection = obj.children.filter(function(x){return x.type === 'utility'})
-      if collection.length
-        .section.utilities
-          // h3 
-            Utilities
-            .memberContent
-              mixin links(collection)
     
     else
-
       .section.method
         .memberContent
           if obj.signatures
@@ -217,9 +169,15 @@ mixin render_starting_tabs(obj, pos)
             -var heading = obj.path
             span.name #{heading}
               -if (pos >= 0)
+                  if nodejsRef == 'true'
                     span.editInC9 
-                      mixin formatGHHref(obj.file)
-                  
+                      mixin formatGHHref(obj.file, 'nodejs_ref_guide')
+                  if nodejsRef != 'true'
+                    span.backToMDN
+                      if heading == 'Index'
+                        heading = '' 
+                      a(href='https://developer.mozilla.org/en/JavaScript/Reference/Global_Objects/#{heading}', target='_blank') (View original on MDN)
+
           -if (true || obj.filename.indexOf("index") < 0)
             ul(class='nav tabs pos#{pos}', data-tabs='tabs')
               for selector, title in {'Events': ['event', 'events'], 'Constructors': ['constructor', 'constructors'], 'Class methods': ['class method', 'class_methods'], 'Class properties': ['class property', 'class_properties'], 'Instance methods': ['instance method', 'instance_methods'], 'Instance properties': ['instance property', 'instance_properties'], 'Constants': ['constant', 'constants']}
@@ -256,9 +214,3 @@ mixin links(collection)
     for obj in collection
       li
         mixin link(obj)
-
-mixin formatGHHref(url)
-  url = url.substring(url.indexOf("ace/lib"))
-
-  -url = url.replace(/\/{2,}/g, "/").replace(/\//g,"%2F")
-  <a href='http://c9.io/open/git/?url=git%3A%2F%2Fgithub.com%2Fajaxorg%2Face.git' title='Edit in Cloud9 IDE'>[edit]</a>
